handle registration user
